feat: Token quota management with per-user override & audit logging